2005-03-28  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b20

	* Change: Wording on view_album. 
		"admin options" -> "album actions"
		"edit ..." -> "... actions"

2005-03-27  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b19

	* Fix: madmod1 skin had unquoted keys.

2005-03-27  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b18

	* Fix: admin-page.php, stats-wizard.php, tools/despam-comments.php and 
	       tools/validate_albums.php gave errors when embedded.

	* Fix: Show manage user link in adminpage only when not embedded.

	* Fix: Added tools/validate_albums.php to securelsit to allow running embedded.

	* Fix: Typo in tools/despam-comments.php.

	* CHange: Moved some css from adminpage and stats-wizard into base.css
	        
2005-03-24  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b17

	* Change: Upgrade GR Applets to 1.4.2-b12

2005-03-24  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b16

	* Fix: multi_create_user wasn't globalized

	* Fix: Variable typo in manager_users

2005-03-23  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b15

	* Change: Don't update the album's mod time when users request mail
	  notifications.

2005-03-23  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b14

	* Change: An attempt to bypass the Zend problem of reversing breadcrumbs

	* Fix: IM5 strip logic was backwards, too?  *confuzzled*

2005-03-21  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b13

	* Fix: stats wouldn't filter by day, month and year.  Only one at a time.

2005-03-21  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b12

	* Fix: check_mail.php wasn't globalized

	* Change: rss.php - use <pb:width>... instead of attributes

	* Fix: Custom regenerate_session_id didn't work on Win32

2005-03-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b11

	* Fix: Forgot a $ in b10 fix for the b4 fix.

2005-03-18  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b10

	* Fix: The headers in the b4 fix was not concatenated.
