@@ -1,3 +1,8 @@
+2005-03-29  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-RC3-b21
+
+	* Fix: check_mail.php now uses gallery_mail() instead of calling mail()
+	  directly.
+
 2005-03-28  Jens A. Tkotz <jens@peino.de>  1.5-cvs-RC3-b20
 
 	* Change: Wording on view_album. 
